ola-parser/src/testdata/syntaxTests/parsing/trailing_dot2.sol
contract test {
	u256 a = 2.2e10;
	u256 b = .5E10;
	u256 c = 2 + 2.;
}
// ----
// ParserError 2314: (76-77): Expected identifier but got ';'
